# AssimilScheduler

./: README.md  main.py  pyproject.toml  server.py
configs/: french_config.py
courses/: chinese_config.py  french_config.py  spanish_advanced_config.py
logs/: chinese_log.txt  french_log.txt  spanish_advanced_log.txt
src/: cache.py  configs.py  courses.py  db.py  log_reader.py  priority_queue.py  scheduler.py  schema.py
src/configs/: chinese_config.py  french_config.py  spanish_advanced_config.py
src/courses/: chinese_config.py  french_config.py  spanish_advanced_config.py
src/db/: assimil_scheduler.db
static/: example-component.js  home-component.js  home-page.html  index.html  language-component.js  language-page.html  styles.css
static/components/: container-component.js  heat-map-component.js  home-component.js  language-component.js  timer-component.js  wave-component.js
static/css/: shared.css  styles.css
static/pages/: home-page.html  language-page.html
tests/: test_configs.py  test_courses.py  test_db.py  test_log_reader.py  test_server.py
tests/fixtures/: example_config.py  log_file_dates_not_in_order_log.txt  log_file_malformed_headers_log.txt  log_file_no_headers_log.txt  log_file_too_many_values_log.txt  valid_log.txt
tests/fixtures/folder_with_duplicate_configs/: example2_config.py
tests/fixtures/folder_with_duplicate_courses/: example2_config.py
