[project]
name = "assimil_scheduler"
version = "0.1.0"
description = "Assimil Scheduler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "fastapi[standard]>=0.135.2",
    "pytest>=9.0.2",
    "uvicorn>=0.42.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
